[Sync] Fix bug in NonUIDataTypeController::Stop().

The shared change processor should always be cleared.

BUG=639449

Review-Url: https://codereview.chromium.org/2265703002
Cr-Commit-Position: refs/heads/master@{#413372}

Former-commit-id: 5567c4aeb3c878a8b92c68977e1c0507b187a592